[Minor] Fix Keyhole z-index

--- a/styles/fcc-portfolio-welcome-style.css
+++ b/styles/fcc-portfolio-welcome-style.css
@@ -98,7 +98,6 @@ img:active {
 }
 svg {
   position: absolute;
-  z-index: 6;
   transform: scale(.15);
   transform-origin: bottom;
   bottom: 1rem;
